; ModuleID = '/home/carl/AnghaBench/h2o/deps/libyrmcds/extr_send.c_yrmcds_decr.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/libyrmcds/extr_send.c_yrmcds_decr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@YRMCDS_BAD_ARGUMENT = common dso_local global i32 0, align 4
@YRMCDS_CMD_DECREMENTQ = common dso_local global i32 0, align 4
@YRMCDS_CMD_DECREMENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @yrmcds_decr(%struct.TYPE_5__* %0, i8* %1, i64 %2, i32 %3, i32 %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_5__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca [20 x i8], align 16
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %8, align 8
  store i8* %1, i8** %9, align 8
  store i64 %2, i64* %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %16 = icmp eq %struct.TYPE_5__* %15, null
  br i1 %16, label %23, label %17

17:                                               ; preds = %6
  %18 = load i8*, i8** %9, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %23, label %20

20:                                               ; preds = %17
  %21 = load i64, i64* %10, align 8
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %20, %17, %6
  %24 = load i32, i32* @YRMCDS_BAD_ARGUMENT, align 4
  store i32 %24, i32* %7, align 4
  br label %60

25:                                               ; preds = %20
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %38

30:                                               ; preds = %25
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = load i64, i64* %10, align 8
  %34 = load i32, i32* %11, align 4
  %35 = load i32, i32* %12, align 4
  %36 = load i32*, i32** %13, align 8
  %37 = call i32 @yrmcds_text_decr(%struct.TYPE_5__* %31, i8* %32, i64 %33, i32 %34, i32 %35, i32* %36)
  store i32 %37, i32* %7, align 4
  br label %60

38:                                               ; preds = %25
  %39 = load i32, i32* %11, align 4
  %40 = getelementptr inbounds [20 x i8], [20 x i8]* %14, i64 0, i64 0
  %41 = call i32 @hton64(i32 %39, i8* %40)
  %42 = getelementptr inbounds [20 x i8], [20 x i8]* %14, i64 0, i64 8
  %43 = call i32 @hton64(i32 0, i8* %42)
  %44 = getelementptr inbounds [20 x i8], [20 x i8]* %14, i64 0, i64 16
  %45 = call i32 @hton32(i32 -1, i8* %44)
  %46 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %47 = load i32, i32* %12, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %38
  %50 = load i32, i32* @YRMCDS_CMD_DECREMENTQ, align 4
  br label %53

51:                                               ; preds = %38
  %52 = load i32, i32* @YRMCDS_CMD_DECREMENT, align 4
  br label %53

53:                                               ; preds = %51, %49
  %54 = phi i32 [ %50, %49 ], [ %52, %51 ]
  %55 = load i32*, i32** %13, align 8
  %56 = load i64, i64* %10, align 8
  %57 = load i8*, i8** %9, align 8
  %58 = getelementptr inbounds [20 x i8], [20 x i8]* %14, i64 0, i64 0
  %59 = call i32 @send_command(%struct.TYPE_5__* %46, i32 %54, i32 0, i32* %55, i64 %56, i8* %57, i32 20, i8* %58, i32 0, i32* null)
  store i32 %59, i32* %7, align 4
  br label %60

60:                                               ; preds = %53, %30, %23
  %61 = load i32, i32* %7, align 4
  ret i32 %61
}

declare dso_local i32 @yrmcds_text_decr(%struct.TYPE_5__*, i8*, i64, i32, i32, i32*) #1

declare dso_local i32 @hton64(i32, i8*) #1

declare dso_local i32 @hton32(i32, i8*) #1

declare dso_local i32 @send_command(%struct.TYPE_5__*, i32, i32, i32*, i64, i8*, i32, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
